platform/core/openbao/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    istio-injection: disabled
    app.kubernetes.io/part-of: sre-platform
    pod-security.kubernetes.io/enforce: privileged
